<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet: %s</string>
    <string name="action_settings">Settings</string>
    <string name="download">Download</string>

    <string name="please_choose_a_download_package">Please choose a download package</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="change_name">Udacity</string>
    <string name="change_description">Android Kotlin Nanodegree</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading</string>
    <string name="button_download_completed">Download Completed</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_file_name">Glide - Image loading library by BumpTech</string>
    <string name="loadapp_file_name">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_file_name">Retrofit - A type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="ok">OK</string>
    <string name="File_name">File name:</string>
    <string name="Status">Status:</string>
</resources>
