<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radio_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:layout_marginBottom="15dp"
            android:id="@+id/glide_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_file_name" />

        <RadioButton
            android:id="@+id/load_app_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadapp_file_name" />

        <RadioButton
            android:layout_marginTop="15dp"
            android:id="@+id/retrofit_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_file_name" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:backgroundButtonColor="@color/green"
        app:circleProgressColor="@color/colorAccent"
        app:text="@string/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>